--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#top" class="nav-link">Binario</a></li>
-            <li><a href="#weapons" class="nav-link">Recursos Principales</a></li>
-            <li><a href="#a_voluntad" class="nav-link" title="Proximamente">A Voluntad!</a></li>
+            <li><a href="#services" class="nav-link">Servicios</a></li>
+            <li><a href="#about" class="nav-link">Nosotros</a></li>
+            <li><a href="#skills" class="nav-link">Tecnologias</a></li>
+            <li><a href="#portfolio" class="nav-link">Portfolio</a></li>
           </ul>
         </div>
       </div>
@@ -86,105 +88,224 @@
 
       <div class="sect-border"></div>
 
-      <h3 id="weapons" class="subhead">Recursos Principales</h3>
+      <h3 id="services" class="subhead">Servicios</h3>
       <div class="row">
-        <div class="col-md-10 col-md-offset-1">
-          <p>Estos son algunos lenguajes de programacion y frameworks con los cuales se trabaja y desarrolla en NaveBinario. <br />A la hora de programar siempre invocamos el principio KISS (Keep It Simple, Stupid!). Se implementa el manejo de objetos y funciones reutilizables para mejorar la flexibilidad de los proyectos.</p>
-          <p>Creemos que el <b>codigo prolijo</b>, ayuda a trabajar en forma eficiente, integrar mejor el trabajo con otros programadores, y solucionar mejor cualquier conflicto que se presente.</p>
+        <div class="col-md-10 col-md-offset-1 benefit text-center">
+          <p>Aplicaciones Web | Landing Pages | Migración de Plataformas Web <!--| Implementacion de MicroSitios --> </p>
+          <p>Desarrollos A Medida | Implementación de Tecnologías Bitcoin y Otras |<br /> Asesoramiento Gratuito </p>
         </div>
-
-        <ul class="row v-center">
-          <li class="benefit">
-            <div class="benefit-ball transparent">
-              <img src="iconos/PHP.png" alt="php" />
-            </div>
-            <h3>PHP | OOP</h3>
-          </li>
-          <li class=" benefit">
-            <div class="benefit-ball transparent">
-              <img src="iconos/JS.png" alt="JavaScript" />
-            </div>
-            <h3>JavaScript | OOP</h3>
-          </li>
-          <li class="benefit">
-            <div class="benefit-ball transparent">
-              <img src="iconos/html5.png" alt="HTML" />
-            </div>
-            <h3>HTML | HTML5</h3>
-          </li>
-          <li class="benefit">
-            <div class="benefit-ball transparent">
-              <img src="iconos/CSS.png" alt="CSS" />
-            </div>
-            <h3>CSS | CSS3</h3>
-          </li>
-          <li class="benefit">
-            <div class="benefit-ball transparent">
-              <img src="iconos/MySQL2.png" alt="SQL" />
-            </div>
-            <h3>SQL/MySQL</h3>
-          </li>
-
-          <li class="benefit">
-            <div class="benefit-ball transparent">
-              <img src="iconos/CakePHP.png" alt="CakePHP" />
-            </div>
-            <h3>CakePHP</h3>
-          </li>
-          <li class="benefit">
-            <div class="benefit-ball transparent">
-              <img src="iconos/JQuery.png" alt="JQuery" />
-            </div>
-            <h3>JQuery</h3>
-          </li>
-          <li class="benefit">
-            <div class="benefit-ball transparent">
-              <img src="iconos/Bootstrap.png" alt="Bootstrap" />
-            </div>
-            <h3>Bootstrap</h3>
-          </li>
-          <li class="benefit">
-            <div class="benefit-ball transparent">
-              <img src="iconos/GNU.png" alt="GNU" />
-            </div>
-            <h3>GNU/Linux</h3>
-          </li>
-          <li class="benefit">
-            <div class="benefit-ball transparent">
-              <img src="iconos/Angular.png" alt="Angular" />
-            </div>
-            <h3>Angular</h3>
-          </li>
-          <li class="benefit">
-            <div class="benefit-ball transparent">
-              <img src="iconos/Meterial_Design.png" alt="Meterial Design" />
-            </div>
-            <h3>Meterial Design</h3>
-          </li>
-          <li class="benefit">
-            <div class="benefit-ball transparent">
-              <img src="iconos/meteor.png" alt="Meteor JS" />
-            </div>
-            <h3>Meteor JS</h3>
-          </li>
-          <!-- <li class="benefit">
-            <div class="benefit-ball transparent">
-              <img src="iconos/Scrum.png" alt="Scrum" />
-            </div>
-            <h3>Metodologia Scrum</h3>
-          </li> -->
-         </ul>
       </div>
 
       <div class="sect-border"></div>
 
-      <h3 id="a_voluntad" class="subhead">A voluntad !</h3>
+      <h3 id="about" class="subhead">Nosotros</h3>
+      <div class="row">
+        <div class="col-md-10 col-md-offset-1 benefit text-center">
+
+          <p>Nuestra labor es escuchar la necesitad del cliente y orientarlo, para juntos desarrollar el proyecto que lo lleve a realizar su idea.</p>
+          <p>A la hora de programar siempre invocamos el principio KISS (Keep It Simple, Stupid!). Se implementa el manejo de objetos y funciones reutilizables para mejorar la flexibilidad de los proyectos.</p>
+          <p>Creemos que el código prolijo, ayuda a trabajar en forma eficiente, integrar mejor el trabajo con otros programadores, y solucionar mejor cualquier conflicto que se presente.</p>
+          <p>Estos son algunos lenguajes de programación y frameworks con los cuales se trabaja y desarrolla en NaveBinario.</p>
+        </div>
+      </div>
+
+      <div class="sect-border"></div>
+
+      <h3 id="skills" class="subhead">Tecnologias</h3>
+      <div class="row">
+        <div class="col-md-10 col-md-offset-1 benefit text-center">
+
+          <ul class="row v-center text-center">
+            <li class="benefit">
+              <div class="benefit-ball transparent">
+                <img src="iconos/PHP.png" alt="php" />
+              </div>
+              <h3>PHP | OOP</h3>
+            </li>
+            <li class=" benefit">
+              <div class="benefit-ball transparent">
+                <img src="iconos/JS.png" alt="JavaScript" />
+              </div>
+              <h3>JavaScript | OOP</h3>
+            </li>
+            <li class="benefit">
+              <div class="benefit-ball transparent">
+                <img src="iconos/html5.png" alt="HTML" />
+              </div>
+              <h3>HTML | HTML5</h3>
+            </li>
+            <li class="benefit">
+              <div class="benefit-ball transparent">
+                <img src="iconos/CSS.png" alt="CSS" />
+              </div>
+              <h3>CSS | CSS3</h3>
+            </li>
+            <li class="benefit">
+              <div class="benefit-ball transparent">
+                <img src="iconos/MySQL2.png" alt="SQL" />
+              </div>
+              <h3>SQL/MySQL</h3>
+            </li>
+
+            <li class="benefit">
+              <div class="benefit-ball transparent">
+                <img src="iconos/CakePHP.png" alt="CakePHP" />
+              </div>
+              <h3>CakePHP</h3>
+            </li>
+            <li class="benefit">
+              <div class="benefit-ball transparent">
+                <img src="iconos/JQuery.png" alt="JQuery" />
+              </div>
+              <h3>JQuery</h3>
+            </li>
+            <li class="benefit">
+              <div class="benefit-ball transparent">
+                <img src="iconos/Bootstrap.png" alt="Bootstrap" />
+              </div>
+              <h3>Bootstrap</h3>
+            </li>
+            <li class="benefit">
+              <div class="benefit-ball transparent">
+                <img src="iconos/GNU.png" alt="GNU" />
+              </div>
+              <h3>GNU/Linux</h3>
+            </li>
+            <li class="benefit">
+              <div class="benefit-ball transparent">
+                <img src="iconos/Angular.png" alt="Angular" />
+              </div>
+              <h3>Angular</h3>
+            </li>
+            <li class="benefit">
+              <div class="benefit-ball transparent">
+                <img src="iconos/Meterial_Design.png" alt="Meterial Design" />
+              </div>
+              <h3>Meterial Design</h3>
+            </li>
+            <li class="benefit">
+              <div class="benefit-ball transparent">
+                <img src="iconos/meteor.png" alt="Meteor JS" />
+              </div>
+              <h3>Meteor JS</h3>
+            </li>
+            <!-- <li class="benefit">
+              <div class="benefit-ball transparent">
+                <img src="iconos/Scrum.png" alt="Scrum" />
+              </div>
+              <h3>Metodologia Scrum</h3>
+            </li> -->
+          </ul>
+      </div>
+
+      <!-- <div class="sect-border"></div>
+
+       <h3 id="a_voluntad" class="subhead">A voluntad !</h3>
       <div class="row">
         <div class="col-md-10 col-md-offset-1">
           <p>A voluntad, realizo asesoramientos, mantenimientos menores y escuchar ideas. <br />Suelo publicar escazo codigo, pero todo lo que pueda devolver a la comunidad del software, sera dado... gracias por tanta generocidad.</p>
           <p>Si necesitas instalar un sistema gnu/linux o alguno otro software libre, acepto retribuciones de cualquier moneda tipo clase y color...</p>
         </div>
+      </div> -->
+
+      <div class="sect-border"></div>
+
+      <h3 id="portfolio" class="subhead">Portfolio</h3>
+      <div class="row">
+        <div id="slideshow" class="carousel slide">
+          <ol class="carousel-indicators">
+            <li data-target="#slideshow" data-slide-to="0" class="active"></li>
+            <li data-target="#slideshow" data-slide-to="1"></li>
+            <li data-target="#slideshow" data-slide-to="2"></li>
+            <li data-target="#slideshow" data-slide-to="3"></li>
+            <li data-target="#slideshow" data-slide-to="4"></li>
+            <li data-target="#slideshow" data-slide-to="5"></li>
+            <li data-target="#slideshow" data-slide-to="6"></li>
+          </ol>
+
+          <div class="carousel-inner">
+            <div class="item active">
+              <a href="#proyecto-ecomexperts">
+                <img src="screeshots/ecomexperts.com-00.png">
+              </a>
+              <div class="carousel-caption">
+                <p><b>Cliente: Ecom Experts S.A.</b> - <b>Proyecto: app.ecomexperts.com</b></p>
+                <p>Diseño logico, desarrollo y mantenimiento de modulos para la aplicación</p>
+                <p>Tecnologias: CakePHP, AngularJS, Bootstrap, CSS, HTML, PHP, SQL </p>
+              </div>
+            </div>
+            <div class="item">
+              <a href="#proyecto-ecomexperts">
+                <img src="screeshots/esta-formulaire.us-00.png">
+              </a>
+              <div class="carousel-caption">
+                <p><b>Cliente: Punto Rojo Marketing</b> - <b>Proyecto: esta-formulaire.us</b></p>
+                <p>Generar sidebar con multimple funcionalidad, facilitar la cargar y listado de paginas estaticas y posts sobre plataforma Wordpress</p>
+                <p>Tecnologias: CSS, HTML, PHP, JavaScript, Wordpress </p>
+              </div>
+            </div>
+            <div class="item">
+              <a href="#proyecto-ecomexperts">
+                <img src="screeshots/socialfunky.com-00.png">
+              </a>
+              <div class="carousel-caption">
+                <p><b>Cliente: Punto Rojo Marketing</b> - <b>Proyecto: socialfunky.com</b></p>
+                <p>Maquetado y diseño del sitio web desde cero, y aplicarlo sobre la plataforma Wordpress</p>
+                <p>Tecnologias: CSS, HTML, PHP, JavaScript, Wordpress </p>
+              </div>
+            </div>
+            <div class="item">
+              <a href="#proyecto-ecomexperts">
+                <img src="screeshots/usa-esta.us-blog-00.png">
+              </a>
+              <div class="carousel-caption">
+                <p><b>Cliente: Punto Rojo Marketing</b> - <b>Proyecto: usa-esta.us</b></p>
+                <p>Creacion de Paginas, aplicar criterios esteticos, creacion de sidebar automatizada y seccion de blog, traducciones.</p>
+                <p>Tecnologias: CSS, HTML, PHP, JavaScript, Wordpress </p>
+              </div>
+            </div>
+            <div class="item">
+              <a href="#proyecto-ecomexperts">
+                <img src="screeshots/todopostres.com-00.png">
+              </a>
+              <div class="carousel-caption">
+                <p><b>Cliente: Punto Rojo Marketing</b> - <b>Proyecto: todopostres.com</b></p>
+                <p>Personalización de plugins y theme para satisfacer criterios esteticos, funcionales y SEO</p>
+                <p>Tecnologias: CSS, JavaScript, JQuery, HTML, PHP, Wordpress </p>
+              </div>
+            </div>
+            <div class="item">
+              <a href="#proyecto-ecomexperts">
+                <img src="screeshots/carroComprasJS.png">
+              </a>
+              <div class="carousel-caption">
+                <p><b>Cliente: Escuela Leonardo Da Vinci</b> - <b>Proyecto: Carro De Compras JS</b></p>
+                <p>Desarrollo de un carro de compras a medida <a href="https://github.com/otharwa/carroDeComprasJS">Codigo</a></p>
+                <p>Tecnologias: CSS, JavaScript, XHTML1.1 </p>
+              </div>
+            </div>
+            <div class="item">
+              <a href="#proyecto-ecomexperts">
+                <img src="screeshots/ferentino.com.ar-00.png">
+              </a>
+              <div class="carousel-caption">
+                <p><b>Cliente: Metalurgica Ferentino</b> - <b>Proyecto: ferentino.com.ar</b></p>
+                <p>Creacion de landing page con insercion de marca de agua en la galeria</p>
+                <p>Tecnologias: CSS, JavaScript, JQuery, HTML5, PHP, Wordpress </p>
+              </div>
+            </div>
+          </div>
+
+          <a class="left carousel-control" href="#slideshow" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+          </a>
+          <a class="right carousel-control" href="#slideshow" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+          </a>
+        </div> <!-- #slideshow -->
       </div>
+
+      <div class="sect-border"></div>
     </div>
 
     <footer>
