--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
           <div class="carousel-inner">
             <div class="item active">
               <a href="#proyecto-ecomexperts">
-                <img src="screeshots/ecomexperts.com-00.png">
+                <img src="screeshots/ecomexperts.com-00.jpg">
               </a>
               <div class="carousel-caption">
                 <p><b>Cliente: Ecom Experts S.A.</b> - <b>Proyecto: app.ecomexperts.com</b></p>
@@ -236,7 +236,7 @@
             </div>
             <div class="item">
               <a href="#proyecto-ecomexperts">
-                <img src="screeshots/esta-formulaire.us-00.png">
+                <img src="screeshots/esta-formulaire.us-00.jpg">
               </a>
               <div class="carousel-caption">
                 <p><b>Cliente: Punto Rojo Marketing</b> - <b>Proyecto: esta-formulaire.us</b></p>
@@ -246,7 +246,7 @@
             </div>
             <div class="item">
               <a href="#proyecto-ecomexperts">
-                <img src="screeshots/socialfunky.com-00.png">
+                <img src="screeshots/socialfunky.com-00.jpg">
               </a>
               <div class="carousel-caption">
                 <p><b>Cliente: Punto Rojo Marketing</b> - <b>Proyecto: socialfunky.com</b></p>
@@ -256,7 +256,7 @@
             </div>
             <div class="item">
               <a href="#proyecto-ecomexperts">
-                <img src="screeshots/usa-esta.us-blog-00.png">
+                <img src="screeshots/usa-esta.us-blog-00.jpg">
               </a>
               <div class="carousel-caption">
                 <p><b>Cliente: Punto Rojo Marketing</b> - <b>Proyecto: usa-esta.us</b></p>
@@ -266,7 +266,7 @@
             </div>
             <div class="item">
               <a href="#proyecto-ecomexperts">
-                <img src="screeshots/todopostres.com-00.png">
+                <img src="screeshots/todopostres.com-00.jpg">
               </a>
               <div class="carousel-caption">
                 <p><b>Cliente: Punto Rojo Marketing</b> - <b>Proyecto: todopostres.com</b></p>
@@ -276,7 +276,7 @@
             </div>
             <div class="item">
               <a href="#proyecto-ecomexperts">
-                <img src="screeshots/carroComprasJS.png">
+                <img src="screeshots/carroComprasJS.jpg">
               </a>
               <div class="carousel-caption">
                 <p><b>Cliente: Escuela Leonardo Da Vinci</b> - <b>Proyecto: Carro De Compras JS</b></p>
@@ -286,7 +286,7 @@
             </div>
             <div class="item">
               <a href="#proyecto-ecomexperts">
-                <img src="screeshots/ferentino.com.ar-00.png">
+                <img src="screeshots/ferentino.com.ar-00.jpg">
               </a>
               <div class="carousel-caption">
                 <p><b>Cliente: Metalurgica Ferentino</b> - <b>Proyecto: ferentino.com.ar</b></p>
