--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
               <h3>Metodologia Scrum</h3>
             </li> -->
           </ul>
+        </div>
       </div>
 
       <!-- <div class="sect-border"></div>
