--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
       <h3 id="skills" class="subhead">Tecnologias</h3>
       <div class="row">
-        <div class="col-md-10 col-md-offset-1 benefit text-center">
+        <div class="col-md-12 benefit text-center">
 
           <ul class="row v-center text-center">
             <li class="benefit">
