--- a/index.html
+++ b/index.html
@@ -222,6 +222,8 @@
             <li data-target="#slideshow" data-slide-to="4"></li>
             <li data-target="#slideshow" data-slide-to="5"></li>
             <li data-target="#slideshow" data-slide-to="6"></li>
+            <li data-target="#slideshow" data-slide-to="7"></li>
+            <li data-target="#slideshow" data-slide-to="8"></li>
           </ol>
 
           <div class="carousel-inner">
@@ -277,6 +279,16 @@
             </div>
             <div class="item">
               <a href="#proyecto-ecomexperts">
+                <img src="screeshots/zonacitas.com-00.jpg">
+              </a>
+              <div class="carousel-caption">
+                <p><b>Cliente: Punto Rojo Marketing</b> - <b>Proyecto: zonacitas.com</b></p>
+                <p>Maquetar Landing Page estatica, para posicionamiento de marca con tecnicas SEO</p>
+                <p>Tecnologias: CSS, HTML </p>
+              </div>
+            </div>
+            <div class="item">
+              <a href="#proyecto-ecomexperts">
                 <img src="screeshots/carroComprasJS.jpg">
               </a>
               <div class="carousel-caption">
@@ -293,6 +305,16 @@
                 <p><b>Cliente: Metalurgica Ferentino</b> - <b>Proyecto: ferentino.com.ar</b></p>
                 <p>Creacion de landing page con insercion de marca de agua en la galeria</p>
                 <p>Tecnologias: CSS, JavaScript, JQuery, HTML5, PHP, Wordpress </p>
+              </div>
+            </div>
+            <div class="item">
+              <a href="#proyecto-ecomexperts">
+                <img src="screeshots/egregormusic.com.ar-00.jpg">
+              </a>
+              <div class="carousel-caption">
+                <p><b>Cliente: Egregor Music</b> - <b>Proyecto: egregormusic.com.ar</b></p>
+                <p>Insertar configurar/editar plugin para traduccion a multiples idiomas</p>
+                <p>Tecnologias: CSS, HTML, PHP, Wordpress</p>
               </div>
             </div>
           </div>
